--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,8 @@
 	</properties>
 
 	<modules>
-		<module>muses-bootservice</module>
+		<module>muses-bootservice-slaver</module>
+		<module>muses-bootservice-master</module>
 		<module>muses-service-gateway</module>
 		<module>muses-service-invoker</module>
 		<module>muses-service-provider</module>
