--- a/muses-bootservice-master/src/main/resources/application.yml
+++ b/muses-bootservice-master/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
 #注册中心
 eureka:
   instance:
-    hostname: localhost
+    hostname: master
     prefer-ip-address: true
   client:
   #不将自身注册到服务器
@@ -16,4 +16,5 @@ eureka:
     fetch-registry: false
     service-url:
     #声明注册中心的地址和端口
-      defaulutZone: http://${eureka.instance.hostname}:${server.port}/eureka/
+      #defaulutZone: http://${eureka.instance.hostname}:${server.port}/eureka/
+      defaulutZone: http://slaver:8762/eureka/
