--- a/muses-bootservice-master/src/main/resources/application.yml
+++ b/muses-bootservice-master/src/main/resources/application.yml
@@ -11,8 +11,9 @@ eureka:
     hostname: master
     prefer-ip-address: true
   client:
-  #不将自身注册到服务器
-    register-with-eureka: false
+    #不将自身注册到服务器
+    register-with-eureka: false 
+    #不需要检索服务
     fetch-registry: false
     service-url:
     #声明注册中心的地址和端口
