--- a/muses-bootservice-slaver/src/main/resources/application.yml
+++ b/muses-bootservice-slaver/src/main/resources/application.yml
@@ -11,9 +11,10 @@ eureka:
     hostname: slaver
     prefer-ip-address: true
   client:
-  #不将自身注册到服务器
+    #不将自身注册到服务器
     register-with-eureka: false
+    #不需要检索服务
     fetch-registry: false
     service-url:
     #声明注册中心的地址和端口
-      defaulutZone: http://master:8762/eureka/
+      defaulutZone: http://master:8761/eureka/
