--- a/muses-service-invoker/src/main/resources/application.yml
+++ b/muses-service-invoker/src/main/resources/application.yml
@@ -26,7 +26,8 @@ eureka:
     lease-expiration-duration-in-seconds: 120
   client:
     service-url:
-      defaulutZone: http://${eureka.instance.hostname}:8761/eureka/
+      #defaulutZone: http://${eureka.instance.hostname}:8761/eureka/
+      defaulutZone: http://master:8761/eureka/,http://slaver:8762/eureka/
 feign:
   hystrix:
     enabled: true      
