--- a/muses-service-provider/src/main/resources/application.yml
+++ b/muses-service-provider/src/main/resources/application.yml
@@ -18,4 +18,5 @@ eureka:
     prefer-ip-address: true
   client:
     service-url:
-      defaulutZone: http://${eureka.instance.hostname}:8761/eureka/
+      defaulutZone: http://master:8761/eureka/,http://slaver:8762/eureka/
+      #defaulutZone: http://${spring.application.name}:8761/eureka/
