--- a/muses-bootservice-master/src/main/resources/application.yml
+++ b/muses-bootservice-master/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8761
+  port: 8001
 
 spring:
   application:
@@ -9,13 +9,12 @@ spring:
 eureka:
   instance:
     hostname: master
-    prefer-ip-address: true
+    #prefer-ip-address: true
   client:
-    #不将自身注册到服务器
-    register-with-eureka: false 
-    #不需要检索服务
-    fetch-registry: false
+    #不将自身注册到服务器 - > false
+    register-with-eureka: true
+    #不需要检索服务 ->false
+    fetch-registry: true
     service-url:
     #声明注册中心的地址和端口
-      #defaulutZone: http://${eureka.instance.hostname}:${server.port}/eureka/
-      defaulutZone: http://slaver:8762/eureka/
+      defaulutZone: http://slaver:8002/eureka/
