--- a/muses-service-provider/src/main/resources/application.yml
+++ b/muses-service-provider/src/main/resources/application.yml
@@ -8,27 +8,32 @@ spring:
   #公共配置
   jackson:
     date-format: yyyy-MM-dd HH:mm:ss
----     
-spring:
-  profiles: dev 
-  application:
-     name: dev-port    
----  
-spring:
-  profiles: test 
-  application:
-     name: test-port   
----          
-
-# 注册到注册中心的服务，不再通过地址访问，而是服务名  
-spring:
-  application:
-    name: provider
   rabbitmq:
     host: localhost
     port: 15672
     username: test
     password: 123456
+---     
+spring:
+  profiles: dev 
+  application:
+     name: dev-provider    
+---  
+spring:
+  profiles: test 
+  application:
+     name: test-provider   
+---          
+
+# 注册到注册中心的服务，不再通过地址访问，而是服务名  
+#spring:
+  #application:
+    #name: provider
+  #rabbitmq:
+    #host: localhost
+    #port: 15672
+    #username: test
+    #password: 123456
 
 #注册中心
 eureka:
