--- a/muses-bootservice-slaver/src/main/resources/application.yml
+++ b/muses-bootservice-slaver/src/main/resources/application.yml
@@ -18,4 +18,6 @@ eureka:
     fetch-registry: true
     service-url:
     #声明注册中心的地址和端口
-      defaulutZone: http://master:8001/eureka/
+      defaultZone: http://master:8001/eureka/
+    healthcheck:
+       enabled: true        
