--- a/muses-bootservice-HA/src/main/resources/application-mate2.yml
+++ b/muses-bootservice-HA/src/main/resources/application-mate2.yml
@@ -2,6 +2,9 @@ server:
   port: 8002
 #注册中心
 eureka:
+  # 关闭自我保护 ,暂停的关闭的服务可以被剔除
+  server:
+    enable-self-preservation: false  
   instance:
     hostname: mate2
     #prefer-ip-address: true
