--- a/muses-service-gateway/src/main/resources/application.yml
+++ b/muses-service-gateway/src/main/resources/application.yml
@@ -9,12 +9,15 @@ eureka:
   client:
     service-url:
       #defaulutZone: http://${eureka.instance.hostname}:8761/eureka/
-      defaultZone: http://master:8001/eureka/,http://slaver:8002/eureka/
+      defaultZone: http://mate1:8001/eureka/,http://mate2:8002/eureka/
+   # availability-zones:
+      
 
 zuul:
   routes:
     sale:
-      path: /sale/**
+      #path: /sale/**
+      path: /**
       # 路由的服务器Id
       service-id: invoker     
 #zuul:
