--- a/muses-service-invoker/src/main/resources/application.yml
+++ b/muses-service-invoker/src/main/resources/application.yml
@@ -27,7 +27,7 @@ eureka:
   client:
     service-url:
       #defaulutZone: http://${eureka.instance.hostname}:8761/eureka/
-      defaultZone: http://master:8001/eureka/,http://slaver:8002/eureka/
+      defaultZone: http://mate1:8001/eureka/,http://mate2:8002/eureka/
 feign:
   hystrix:
     enabled: true      
