--- a/muses-service-provider/src/main/resources/application.yml
+++ b/muses-service-provider/src/main/resources/application.yml
@@ -3,7 +3,7 @@
 spring:
   profiles:
     #默认激活哪一个环境的配置文件
-    active: dev
+    active: test
   jackson:
     date-format: yyyy-MM-dd HH:mm:ss
   rabbitmq:
@@ -29,7 +29,7 @@ eureka:
     # 是否优先使用ip作为主机的标识,默认是false,localhost <=> 127.0.0.1
     prefer-ip-address: false
     # InstanceInfo 元数据中的instanceId,默认使用主机名
-    # instance-id: ${spring.application.name}:${random.int}
+    instance-id: ${spring.application.name}:${random.int}
   client:
     service-url:
       defaultZone: http://mate1:8001/eureka/,http://mate2:8002/eureka/
